--- a/TruTime_MainProject_CTS/src/main/java/Config/config.properties
+++ b/TruTime_MainProject_CTS/src/main/java/Config/config.properties
@@ -7,9 +7,9 @@ websiteURLKey=https://be.cognizant.com/
 
 
 #Input your Email ID
-email=2140905@cognizant.com
+email=employeeid@cognizant.com
 #Input your Password
-password=Swathulu@4
+password=Password
 
 
 
